add deleteBookmarkMovie function
