# src/routes/users-routes.js
@@ -2,6 +2,7 @@ import express from "express";
 import {
   addUser,
   bookmarkMovie,
+  deleteBookmarkedMovie,
   fetchUser,
   getAllUsers,
   login,
@@ -17,6 +18,7 @@ usersRouter.get("/users/verify-email/:id/:token", verifyEmail);
 usersRouter.post("/login", login);
 usersRouter.post("/bookmarks", checkToken, bookmarkMovie);
 usersRouter.get("/users/me", checkToken, fetchUser);
+usersRouter.delete("/bookmarks/:movieId", checkToken, deleteBookmarkedMovie);
 
 // usersRouter.delete("/users/empty", emptyTable);
 
